--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -3,7 +3,7 @@ share: true
 ---
 Create an Obsidian profile :
 
-![Pasted image 20230718230851.png](/images/Pasted image 20230718230851.png)
+![[Pasted image 20230718230851.png]]
 
 ![[Pasted image 20230718230910.png]]
 
