--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -3,12 +3,12 @@ share: true
 ---
 Create an Obsidian profile :
 
-![Pasted image 20230718230851.png]({{< ref "Pasted image 20230718230851.png" >}})
+![Pasted image 20230718230851.png](/images/Pasted image 20230718230851.png)
 
-![Pasted image 20230718230910.png]({{< ref "Pasted image 20230718230910.png" >}})
+![Pasted image 20230718230910.png](/images/Pasted image 20230718230910.png)
 
-![Pasted image 20230718230912.png]({{< ref "Pasted image 20230718230912.png" >}})
+![Pasted image 20230718230912.png](/images/Pasted image 20230718230912.png)
 
-[Sans titre avec des espaces]({{< ref "Sans titre avec des espaces" >}})
+[[Sans titre avec des espaces]]
 
 
