--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -9,6 +9,6 @@ Create an Obsidian profile :
 
 ![[Pasted image 20230718230912.png]]
 
-[[Sans titre avec des espaces]]
+[Sans titre avec des espaces]({{< ref "Sans titre avec des espaces" >}})
 
 
