--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -1,14 +1,10 @@
 ---
 share: true
 ---
-Create an Obsidian profile :
 
-![Pasted image 20230718230851.png](/images/Pasted image 20230718230851.png)
 
-![Pasted image 20230718230910.png](/images/Pasted image 20230718230910.png)
 
-![Pasted image 20230718230912.png](/images/Pasted image 20230718230912.png)
-
-[Sans titre avec des espaces]({{< ref "Sans titre avec des espaces" >}})
-
+```dataview
+LIST file.name FROM "INBOX"
+```
 
