PUSH NOTE : Inbox_14-02-2023.md

--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -2,9 +2,10 @@
 share: true
 ---
 
+- [[INBOX/INBOX.md|INBOX]]: INBOX
+- [[INBOX/Sans titre avec des espaces.md|Sans titre avec des espaces]]: Sans titre avec des espaces
+- [[INBOX/Inbox_14-02-2023.md|Inbox_14-02-2023]]: Inbox_14-02-2023
+- [[INBOX/test.md|test]]: test
+- [[INBOX/test2.md|test2]]: test2
 
-
-```dataview
-LIST file.name FROM "INBOX"
-```
 
