PUSH NOTE : Inbox_14-02-2023.md

--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -5,3 +5,26 @@ share: true
 Inbox_14-02-2023
 
 
+| File                                                                  | file.name                   | file.path                            |
+| --------------------------------------------------------------------- | --------------------------- | ------------------------------------ |
+| [[INBOX/INBOX.md\|INBOX]]                                             | INBOX                       | INBOX/INBOX.md                       |
+| [[INBOX/Sans titre avec des espaces.md\|Sans titre avec des espaces]] | Sans titre avec des espaces | INBOX/Sans titre avec des espaces.md |
+| [[INBOX/Inbox_14-02-2023.md\|Inbox_14-02-2023]]                       | Inbox_14-02-2023            | INBOX/Inbox_14-02-2023.md            |
+| [[INBOX/test.md\|test]]                                               | test                        | INBOX/test.md                        |
+| [[INBOX/test2.md\|test2]]                                             | test2                       | INBOX/test2.md                       |
+
+
+> [!info] Dataview test
+> name : Inbox_14-02-2023
+
+| table  |       info        |
+|:------ |:-----------------:|
+| coucou | INBOX/Inbox_14-02-2023.md |
+
+
+> [!warning] test
+> 
+> | table  |       info        |
+> |:------ |:-----------------:|
+> | coucou | INBOX/Inbox_14-02-2023.md |
+
