PUSH NOTE : Inbox_14-02-2023.md

--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -1,30 +1,110 @@
 ---
 share: true
+date created: Thursday, July 27th 2023, 7:41:20 am
+date modified: Friday, July 28th 2023, 8:37:51 am
+whichParty: Party 1
+tags:
+  - ermis
+  - party
+  - pc
+ancestry: Plasmoid
+gender: N/A
+sexuality: Asexual
+pronouns: They/Them
+condition: Healthy
+aliases:
+  - "**Inbox_14-02-2023**"
+type: pc
+name: Blurg
+class: Wizard
+subclass: null
+level: 2
+background: Feylost
+strength: 13
+dexterity: 16
+constitution: 14
+intelligence: 19
+wisdom: 13
+charisma: 10
+hd: 1d6
+ac: "12"
+speed: 30
+alignment: null
+occupation: null
+associatedGroup: null
+associatedReligion: null
+location: null
+traits:
+  - Weird
+  - Supercillious
+  - Inquisitive
+goals: Learn the news about Ooze
+linter-yaml-title-alias: "**Inbox_14-02-2023**"
+art: "![blerg.png](/images/blerg.png)"
 ---
 
-Inbox_14-02-2023
+> [!infobox]
+> # Inbox_14-02-2023 (They/Them)
+> **Pronounced:**  "`=this.pronounced`"
+> ![blerg.png|cover hm-sm](/images/blerg.png|cover hm-sm)
+> ###### Bio
+>  |
+> ---|---|
+> **Age** | `=this.age` |
+> **Sex** | N/A |
+> **Sexuality** | Asexual |
+> **Occupation(s)** | `=this.occupation` |
+> **Group(s)** | `=link(this.associatedGroup)` |
+> **Religion(s)** | `=link(this.associatedReligion)` |
+> **Alias(es)** | `=this.alias` |
+> **Current Location** | `=link(this.location)` |
 
+# **Inbox_14-02-2023**
+> [!info|bg-c-purple]- Overview
+> Blurg is a plasmoid with a mysterious past.
 
-| File                                                                  | file.name                   | file.path                            |
-| --------------------------------------------------------------------- | --------------------------- | ------------------------------------ |
-| [[../../INBOX\|INBOX]]                                             | INBOX                       | INBOX/INBOX.md                       |
-| [[./Sans titre avec des espaces\|Sans titre avec des espaces]] | Sans titre avec des espaces | INBOX/Sans titre avec des espaces.md |
-| [[Inbox_14-02-2023\|Inbox_14-02-2023]]                       | Inbox_14-02-2023            | INBOX/Inbox_14-02-2023.md            |
-| [[../../test\|test]]                                               | test                        | INBOX/test.md                        |
-| [[./test2\|test2]]                                             | test2                       | INBOX/test2.md                       |
-
-
-> [!info] Dataview test
-> name : Inbox_14-02-2023
-
-| table  |       info        |
-|:------ |:-----------------:|
-| coucou | INBOX/Inbox_14-02-2023.md |
-
-
-> [!warning] test
+> [!column|clean no-title] Traits
+> > [!metadata|text-Center bg-c-blue]+ Traits
+> > Weird,Supercillious,Inquisitive
 > 
-> | table  |       info        |
-> |:------ |:-----------------:|
-> | coucou | INBOX/Inbox_14-02-2023.md |
+> > [!metadata|text-Center bg-c-blue]+ Goals
+> > Learn the news about Ooze
 
+## Stats & Info
+> [!column|clean no-title] Stats
+> > [!info|text-Center bg-c-yellow]+ Ability Scores
+> > 
+>  > | Ability      | Score                | Mod                                        |
+>  > |--------------|----------------------|--------------------------------------------|
+>  > | Strength     | 13     | 2     |
+>  > | Dexterity    | 16    | 3    |
+>  > | Constitution | 14 | 2 |
+>  > | Intelligence | 19 | 5 |
+>  > | Wisdom       | 13       | 2       |
+>  > | Charisma     | 10     | `= round(sum(this.charisma - 10) / 2)`     |
+> 
+> > [!info|text-Center bg-c-yellow]+ Other Info
+> > - **Ancestry:**  Plasmoid
+> > - **Background:** Feylost
+> > - **Class:** Wizard
+> > - **Level:** 2
+> > - **Alignment:** `=this.alignment`
+> > - **Condition:** Healthy
+> > - **Hit Dice:** 1d6
+> > - **AC:** 12
+> > - **Speed:** 30
+> > - **Initiative:** \+ 3
+
+
+## Relationships
+> [!column|dataview|clean no-title] Acquaintances
+> > [!metadata|text-Center bg-c-green]- Friends & Family
+> > None known
+> 
+> > [!metadata|text-Center bg-c-red]- Rivals
+> > TBD
+>
+
+## Biographical Details
+
+TBD
