PUSH NOTE : Inbox_14-02-2023.md

--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -46,18 +46,18 @@ art: "![blerg.png](/images/blerg.png)"
 > [!infobox]
 > 
 > # Inbox_14-02-2023 (They/Them)
-> **Pronounced:**  "`=this.pronounced`"
+> **Pronounced:**  "-"
 > ###### Bio
 >  |
 > ---|---|
-> **Age** | `=this.age` |
+> **Age** | - |
 > **Sex** | N/A |
 > **Sexuality** | Asexual |
-> **Occupation(s)** | `=this.occupation` |
-> **Group(s)** | `=link(this.associatedGroup)` |
-> **Religion(s)** | `=link(this.associatedReligion)` |
-> **Alias(es)** | `=this.alias` |
-> **Current Location** | `=link(this.location)` |
+> **Occupation(s)** | - |
+> **Group(s)** | - |
+> **Religion(s)** | - |
+> **Alias(es)** | - |
+> **Current Location** | - |
 
 # **Inbox_14-02-2023**
 > [!info|bg-c-purple]- Overview
@@ -81,14 +81,14 @@ art: "![blerg.png](/images/blerg.png)"
 >> | Constitution | 14 | 2 |
 >> | Intelligence | 19 | 5 |
 >> | Wisdom       | 13       | 2       |
->> | Charisma     | 10     | `= round(sum(this.charisma - 10) / 2)`     |
+>> | Charisma     | 10     | -     |
 > 
 >> [!info|text-Center bg-c-yellow]+ Other Info
 >> - **Ancestry:**  Plasmoid
 >> - **Background:** Feylost
 >> - **Class:** Wizard
 >> - **Level:** 2
->> - **Alignment:** `=this.alignment`
+>> - **Alignment:** -
 >> - **Condition:** Healthy
 >> - **Hit Dice:** 1d6
 >> - **AC:** 12
