PUSH NOTE : Inbox_14-02-2023.md

--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -46,18 +46,18 @@ art: "![blerg.png](/images/blerg.png)"
 > [!infobox]
 > 
 > # Inbox_14-02-2023 (They/Them)
-> **Pronounced:**  "-"
+> **Pronounced:**  "N/A"
 > ###### Bio
 >  |
 > ---|---|
-> **Age** | - |
+> **Age** | N/A |
 > **Sex** | N/A |
 > **Sexuality** | Asexual |
-> **Occupation(s)** | - |
-> **Group(s)** | - |
-> **Religion(s)** | - |
-> **Alias(es)** | - |
-> **Current Location** | - |
+> **Occupation(s)** | N/A |
+> **Group(s)** | N/A |
+> **Religion(s)** | N/A |
+> **Alias(es)** | N/A |
+> **Current Location** | N/A |
 
 # **Inbox_14-02-2023**
 > [!info|bg-c-purple]- Overview
@@ -81,14 +81,14 @@ art: "![blerg.png](/images/blerg.png)"
 >> | Constitution | 14 | 2 |
 >> | Intelligence | 19 | 5 |
 >> | Wisdom       | 13       | 2       |
->> | Charisma     | 10     | -     |
+>> | Charisma     | 10     | N/A     |
 > 
 >> [!info|text-Center bg-c-yellow]+ Other Info
 >> - **Ancestry:**  Plasmoid
 >> - **Background:** Feylost
 >> - **Class:** Wizard
 >> - **Level:** 2
->> - **Alignment:** -
+>> - **Alignment:** N/A
 >> - **Condition:** Healthy
 >> - **Hit Dice:** 1d6
 >> - **AC:** 12
