PUSH NOTE : Inbox_14-02-2023.md

--- a/content/post/Inbox_14-02-2023.md
+++ b/content/post/Inbox_14-02-2023.md
@@ -40,7 +40,7 @@ traits:
   - Inquisitive
 goals: Learn the news about Ooze
 linter-yaml-title-alias: "**Inbox_14-02-2023**"
-art: "![blerg.png](/images/blerg.png)"
+art: "![blerg.png](blerg.png)"
 ---
 
 > [!infobox]
