--- a/测试文件.md
+++ b/测试文件.md
@@ -7,7 +7,4 @@ banner:
   - "[[Pasted image 20231216135154-1.png|Pasted image 20231216135154-1.png]]"
 ---
 
-| Niveaux | Sujets concernés | Fréquence (parmi les cas de CCR) | Risque *spontané* de CCR sur l'existence |
-| ---- | ---- | ---- | ---- |
-|  !!très élevé!! |  |  |  |
-|  |  |  |  |
+![](arrow-down-right-from-circle-1.svg)
