PUSH NOTE : 测试文件.md

--- a/测试文件.md
+++ b/测试文件.md
@@ -5,12 +5,9 @@ convert:
 banner:
   - "[[_assets/Pasted image 20231216135155-1.png|_assets/Pasted image 20231216135155-1.png]]"
   - "[[Pasted image 20231216135154-1.png|Pasted image 20231216135154-1.png]]"
+icon: boxicons/BxsDownArrowAlt
+icon_file: "[[icons/boxicons/BxsDownArrowAlt.svg|BxsDownArrowAlt]]"
 ---
 
-![](arrow-down-right-from-circle-1.svg)
-
-
-
-
-
+machin
 
