--- a/测试文件.md
+++ b/测试文件.md
@@ -4,6 +4,8 @@ convert:
   image: "true"
 icon: boxicons/BxsDownArrowAlt
 icon_file: "[[icons/boxicons/BxsDownArrowAlt.svg|BxsDownArrowAlt]]"
+banner:
+  - "[[image in frontmatter.png|image in frontmatter.png]]"
 ---
 
 machin
