PUSH NOTE : 测试文件.md

--- a/docs/测试文件.md
+++ b/docs/测试文件.md
@@ -1,12 +1,11 @@
 ---
 share: true
-convert:
-  image: "true"
+convert.image: "true"
 icon: boxicons/BxsDownArrowAlt
 icon_file: "[[icons/boxicons/BxsDownArrowAlt.svg|BxsDownArrowAlt]]"
 banner:
   - "[[image in frontmatter.png|image in frontmatter.png]]"
 ---
 
-machin
+coucou
 
